--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -563,9 +563,11 @@ a.label {
 }
 
 .table thead > tr > td, .table thead > tr > th {
-    background-color: #FBFBFB;
+    background-color: #FFF  !important;
+    border-top: 1px solid #F7F7F7 !important;
+    border-bottom: 1px solid #F7F7F7  !important;
     /* padding: 20px 0 20px 20px !important; */
-    color: #002654;
+    /* color: #002654; */
 }
 
 .table thead > tr > td:last-child, .table thead > tr > th:last-child {
