--- a/public/modules/finances/css/table.css
+++ b/public/modules/finances/css/table.css
@@ -24,8 +24,8 @@ thead {
     background-color: transparent;
 }
 
-.table tbody > tr > td:last-child {
-   border-radius: 0 16px !important
+.table tbody:last-child td {
+   border-radius: 0 0 16px 16px !important
 }
 
 @media (max-width: 767px) {
