--- a/public/modules/checkouteditor/css/custom-inputs.css
+++ b/public/modules/checkouteditor/css/custom-inputs.css
@@ -2,116 +2,114 @@
 
 .custom-icon-radio[type="radio"],
 .custom-radio[type="radio"] {
-  position: absolute;
-  left: -9999px;
+    position: absolute;
+    left: -9999px;
 }
 
 .custom-icon-radio[type="radio"] + label {
-  display: flex;
-  justify-content: center;
-  cursor: pointer;
-  width: 35px;
-  height: 35px;
-  border: 1px solid #F3F3F3;
-  box-sizing: border-box;
-  border-radius: 8px;
-  margin: 0 5px 0 0;
-  transition: background 0.7s;
-  padding: 7px;
-  background: #fff;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    border: 1px solid #f3f3f3;
+    box-sizing: border-box;
+    border-radius: 8px;
+    margin: 0 5px 0 0;
+    transition: background 0.7s;
+    padding: 7px;
+    background: #fff;
 }
 
 .custom-icon-radio[type="radio"] + label > img {
-  width: 20px;
+    width: 20px;
 }
 
 .custom-icon-radio[type="radio"]:checked + label {
-  background: #2E85EC;
+    background: #2e85ec;
 }
 
 .custom-icon-radio[type="radio"]:checked + label > img {
-  filter: invert(100%) sepia(96%) saturate(15%) hue-rotate(209deg) brightness(150%) contrast(102%);
+    filter: invert(100%) sepia(96%) saturate(15%) hue-rotate(209deg)
+        brightness(150%) contrast(102%);
 }
 
 .custom-icon-radio img {
-  width: 20px;
+    width: 20px;
 }
 
 .custom-radio[type="radio"] + label {
-  display: flex;
-  justify-content: center;
-  padding: 3px 10px 3px 10px;
-  width: fit-content;
-  min-width: fit-content;
-  cursor: pointer;
-  font-size: 12px;
-  background-color:#E5E5E5;
-  color: #8E8E8E;
-  border-radius: 999px;
-  margin: 0 5px 0 0 !important;
-  transition: 0.5s;
-  padding: 2px 15px;
+    display: flex;
+    justify-content: center;
+    padding: 3px 10px 3px 10px;
+    width: fit-content;
+    min-width: fit-content;
+    cursor: pointer;
+    font-size: 12px;
+    background-color: #e5e5e5;
+    color: #8e8e8e;
+    border-radius: 999px;
+    margin: 0 5px 0 0 !important;
+    transition: 0.5s;
+    padding: 2px 15px;
 }
 
 .custom-radio[type="radio"]:checked + label {
-  background-color:#2E85EC;
-  color: #FFF;
-  font-weight: bold;
+    background-color: #2e85ec;
+    color: #fff;
+    font-weight: bold;
 }
 
 .custom-radio[type="radio"] + label:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 
 .radio-group {
-  display: flex;
+    display: flex;
 }
-
 
 /* ------------ Blue Button Radio -------------- */
 
 .custom-bubble-check[type="checkbox"] {
-  position: absolute;
-  left: -9999px;
+    position: absolute;
+    left: -9999px;
 }
 
 .custom-bubble-check[type="checkbox"] + label {
-  display: flex;
-  justify-content: center;
-  padding: 3px 10px 3px 10px;
-  width: fit-content;
-  min-width: fit-content;
-  cursor: pointer;
-  font-size: 12px;
-  background-color:#E5E5E5;
-  color: #8E8E8E;
-  border-radius: 999px;
-  margin-right: 5px;
-  transition: 0.5s;
-  padding: 2px 15px;
+    display: flex;
+    justify-content: center;
+    padding: 3px 10px 3px 10px;
+    width: fit-content;
+    min-width: fit-content;
+    cursor: pointer;
+    font-size: 12px;
+    background-color: #e5e5e5;
+    color: #8e8e8e;
+    border-radius: 999px;
+    margin-right: 5px;
+    transition: 0.5s;
+    padding: 2px 15px;
 }
 
 .custom-bubble-check[type="checkbox"]:checked + label {
-  background-color:#2E85EC;
-  color: #FFF;
-  font-weight: bold;
+    background-color: #2e85ec;
+    color: #fff;
+    font-weight: bold;
 }
 
 .custom-bubble-check[type="checkbox"] + label:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
 
 .check-group {
-  display: flex;
+    display: flex;
 }
 
-
-.dash-check[type=checkbox]:checked+label::after {
-  font-weight: bold;
-  content: "\f199" !important;
+.dash-check[type="checkbox"]:checked + label::after {
+    font-weight: bold;
+    content: "\f199" !important;
 }
-
 
 .custom-bubble-check[type="checkbox"] + label:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
