--- a/public/modules/checkouteditor/css/preview-styles.css
+++ b/public/modules/checkouteditor/css/preview-styles.css
@@ -9,7 +9,7 @@
 }
 
 .secondary-color {
-    background: var(--secondary-color) !important;   
+    background: var(--secondary-color) !important;
 }
 
 /* --------------- Preview Visual -------------------- */
@@ -20,7 +20,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    min-width: 32%;
+    min-width: 435px;
 }
 
 .preview.fixed-div {
@@ -36,7 +36,7 @@
     min-height: 300px;
     height: fit-content;
     align-items: center;
-		position: relative;
+    position: relative;
 }
 
 .preview-content {
@@ -56,7 +56,7 @@
 
 .preview-content.desktop {
     width: 100%;
-		position: absolute;
+    position: absolute;
 }
 
 .preview-content.mobile {
@@ -368,33 +368,6 @@
     -ms-transition: all 0.7s;
     -o-transition: all 0.7s;
     transition: all 0.7s;
-}
-
-.expand-mobile-button:hover {
-    opacity: 0.7;
-    color: #fff;
-}
-
-.expand-mobile-button:focus {
-    outline: none;
-}
-
-.expand-mobile-button-container .expand-mobile-button.collapsed:after {
-    content: "Expandir";
-}
-
-.expand-mobile-button-container .expand-mobile-button:not(.collapsed):after {
-    content: "Ocultar";
-}
-
-.preview-mobile-collapse.collapse:not(.show) {
-    display: block;
-    height: 250px;
-    overflow: hidden;
-}
-
-.preview-mobile-collapse.collapsing {
-    height: 250px;
 }
 
 .checkout-step-type {
