--- a/resources/assets/modules/global/assets/css/new-site.css
+++ b/resources/assets/modules/global/assets/css/new-site.css
@@ -140,12 +140,12 @@ select, .select-pad {
 }
 
 input:active, input:hover {
-    outline: none !important;
+    outline: 1px solid #2bb2ff;
   }
 
 
 select:active, select:hover {
-    outline: none !important;
+    outline: 1px solid #2bb2ff;
   }
 
 
@@ -742,7 +742,7 @@ font-size: 10px;
     background: none;
     border-color: none;
     border: none;
-    outline: none;
+    outline: 1px solid #2bb2ff;
     font-weight: normal;
     background-image: linear-gradient(77deg, #e6774c, rgb(249, 34, 120)); 
 }
@@ -751,7 +751,7 @@ font-size: 10px;
     background: none;
     border-color: none;
     border: none;
-    outline: none;
+    outline: 1px solid #2bb2ff;
     font-weight: normal;
     background-image: linear-gradient(82deg, rgba(48, 210, 74, 1), rgb(10, 166, 71));
 }
@@ -761,7 +761,7 @@ font-size: 10px;
     border-color: none;
     background-color: none;
     border: none;
-    outline: none;
+    outline: 1px solid #2bb2ff;
     font-weight: normal;
     color: #555;
 }
@@ -771,7 +771,7 @@ font-size: 10px;
     background: none;
     border-color: none;
     border: none;
-    outline: none;
+    outline: 1px solid #2bb2ff;
     font-weight: normal;
     background-image: linear-gradient(to right, rgb(88, 73, 226), rgb(81, 196, 236));
 }
