--- a/public/modules/checkouteditor/css/style.css
+++ b/public/modules/checkouteditor/css/style.css
@@ -1,6 +1,6 @@
 .grid-checkout-editor {
     display: grid;
-    grid-template-columns: 1fr 0.8fr;
+    grid-template-columns: 2fr 1.5fr;
     grid-template-rows: auto auto auto auto auto;
     gap: 20px 20px;
     grid-auto-flow: row;
@@ -19,6 +19,14 @@
 
 .form-checkout-editor {
     width: 100%;
+}
+
+.title-container {
+    background-color: #fff;
+    border-radius: 0 0 16px 16px;
+    margin-bottom: 2.143rem;
+    flex: 1 1 auto;
+    padding: 1.429rem;
 }
 
 #checkout_editor {
@@ -124,6 +132,13 @@
     width: 30px;
     height: 30px;
     margin-right: 10px;
+}
+
+.icon-title.download {
+    width: 13px;
+    height: 13px;
+    margin: 0;
+    margin-top: -5px;
 }
 
 .title-buttons-group {
@@ -323,7 +338,7 @@ input[type="number"] {
 }
 
 #checkout_editor hr {
-    margin: 25px -28px 25px -15px;
+    margin: 25px -28px 25px -28px;
 }
 
 .save-changes {
@@ -493,7 +508,8 @@ input[type="number"] {
 }
 
 .add-tag:hover {
-    opacity: 0.7;
+    border: 1px solid #2e85ec;
+    color: #2e85ec;
 }
 
 .notification-table-cointainer .table thead > tr > td:last-child,
@@ -503,7 +519,7 @@ input[type="number"] {
     border-radius: 0;
     -webkit-border-radius: 0 !important;
     -moz-border-radius: 0 !important;
-    padding: 20px;
+    padding: 20px 20px 30px 20px;
 }
 
 .th-notification {
