--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -1072,6 +1072,16 @@ img.border-icon{
     background: #F8F8F8;
     border: 1px solid #2E85EC;
 }
+.modal-plans #stage1 .informations-edit .icon,
+.modal-plans #stage1 .products-edit .icon,
+.modal-plans #stage1 .review-edit .icon {
+    border: 1px solid #F8F8F8 !important;
+}
+.modal-plans #stage1 .informations-edit .icon:hover,
+.modal-plans #stage1 .products-edit .icon:hover,
+.modal-plans #stage1 .review-edit .icon:hover {
+    border: 1px solid #2E85EC !important;
+}
 .modal-plans .box-stage.finalized .icon {
     background: #2E85EC;
 }
@@ -1202,19 +1212,19 @@ img.border-icon{
 }
 .modal-plans .box-products .box-details .head div:nth-child(1),
 .modal-plans .box-products .box-details .body .product .div-product:nth-child(1) {
-    width: 40%;
+    width: 225px;
 }
 .modal-plans .box-products .box-details .head div:nth-child(2),
 .modal-plans .box-products .box-details .body .product .div-amount:nth-child(2) {
-    width: 16%;
+    width: 85px;
 }
 .modal-plans .box-products .box-details .head div:nth-child(3),
 .modal-plans .box-products .box-details .body .product .div-value:nth-child(3) {
-    width: 21%;
+    width: 112px;
 }
 .modal-plans .box-products .box-details .head div:nth-child(4),
 .modal-plans .box-products .box-details .body .product .div-currency:nth-child(4) {
-    width: 21%;
+    width: 112px;
     margin-right: 0;
 }
 .modal-plans .box-products .box-details .head,
@@ -1779,6 +1789,25 @@ input[type="checkbox"], input[type="radio"] {
     border-radius: 8px;
     background-color: #9E9E9E;
 }
+
+.scroll-x .scrollbox {
+    width: 100%;
+    height: 4px;
+    top: auto;
+    right: auto;
+    bottom: 0;
+    left: 0;
+}
+.scroll-x .scrollbox-bar {
+    height: 4px;
+    width: 60px;
+    top: auto;
+    right: auto;
+    bottom: 0;
+    left: 0;
+    cursor: pointer;
+}
+
 .modal-plans .modal-dialog {
     max-width: 646px;
 }
