--- a/public/modules/finances/css/multi-finances.css
+++ b/public/modules/finances/css/multi-finances.css
@@ -389,7 +389,21 @@ body {
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
     white-space: nowrap;
-    font-size: 11px
+    font-size: 10px;
+    line-height: 13px;
+    color: #A7A7A7;
+}
+.date-label {
+    white-space: nowrap;
+    font-size: 10px;
+    line-height: 13px;
+    color: #A7A7A7;
+}
+.money-label {
+    font-size: 18px;
+    line-height: 23px;
+    font-weight: bold;
+    color: #636363;
 }
 .bg-light {
     background-color: white !important;
