--- a/public/modules/checkouteditor/css/style.css
+++ b/public/modules/checkouteditor/css/style.css
@@ -264,12 +264,10 @@ input[type="number"] {
 }
 
 .dot {
-    height: 10px;
-    width: 10px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
+    height: 15px;
+    width: 15px;
     margin-right: 5px;
+    margin-top: -5px;
 }
 
 .banner-type-group {
