fix: partially_liquidated translation, cache in new tables and debt_pending_value = 0,00

--- a/public/modules/finances/css/multi-finances.css
+++ b/public/modules/finances/css/multi-finances.css
@@ -1,4 +1,3 @@
-
 *:focus,
 .bootstrap-select .dropdown-toggle:focus,
 .bootstrap-select>select.mobile-device:focus+.dropdown-toggle {
@@ -580,6 +579,12 @@ input:checked + .slider::before {
     padding: 0;
 }
 
+.badge {
+    width: -moz-min-content;
+    width: -webkit-min-content;
+    width: min-content;
+    white-space: pre-line;
+}
 @media (max-width: 991px) {
     .new-title {
         margin-left: 0;
