--- a/public/modules/checkouteditor/css/style.css
+++ b/public/modules/checkouteditor/css/style.css
@@ -109,6 +109,25 @@
     color: #878787;
 }
 
+.checkout-error {
+    display: flex;
+    align-items: center;
+}
+
+.checkout-error > p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px !important;
+    margin: 0 !important;
+    line-height: 18px;
+    color: #ff3434;
+    margin: 5px 0 0 0 !important;
+}
+
+.error-input {
+    outline: 1px solid #ff3434 !important;
+}
+
 .tag {
     font-size: 10px;
     padding: 3.5px 5px 3.5px 5px;
@@ -302,7 +321,6 @@ input[type="number"] {
 
 .tagged-input {
     height: 40px;
-    width: 100%;
     border: 1px solid #c4c4c4;
     box-sizing: border-box;
     border-radius: 8px 0px 0px 8px;
@@ -355,7 +373,7 @@ input[type="number"] {
 }
 
 .save-changes p {
-    margin: 0 50px 0 0; 
+    margin: 0 50px 0 0;
     font-size: 18px;
 }
 
@@ -398,7 +416,8 @@ input[type="number"] {
     background-color: #41dc8f;
 }
 
-#save_error {
+#save_error,
+#save_empty_fields {
     background-color: #ff3347;
 }
 
@@ -989,6 +1008,32 @@ input[type="color"]::-moz-color-swatch {
 
 .color-picker:hover {
     opacity: 0.7;
+}
+
+/* QuillJS */
+
+#checkout_editor .quill-editor {
+    height: 70px;
+    border-radius: 0 0 8px 8px;
+}
+
+#checkout_editor .quill-editor.error-input {
+    border: 1px solid #ff3434 !important;
+}
+
+#checkout_editor .ql-toolbar {
+    border-radius: 8px 8px 0 0;
+}
+
+#checkout_editor .quill-editor p {
+    color: #454545;
+    text-align: left;
+}
+
+#checkout_editor .editor-toolbar-container {
+    display: flex;
+    justify-content: center;
+    height: 40px;
 }
 
 /* ----------- Animated Loader ------------- */
